Web Inspector: Dark Mode: SourceCodeTextEditor thread indicator widget is too light https://bugs.webkit.org/show_bug.cgi?id=188119 <rdar://problem/42670811>
Reviewed by Matt Baker.

Make the background of the thread indicator widget darker.

Reduce the number of HTML elements and simplify CSS by removing the HTML element that drew an arrow and using clip-path on inline widgets instead.

* UserInterface/Views/DarkMode.css:
(@media (prefers-dark-interface)):
(.text-editor > .CodeMirror .execution-line):
(.text-editor > .CodeMirror .execution-range-highlight:not(.CodeMirror-selectedtext),):
* UserInterface/Views/SourceCodeTextEditor.css:
(.source-code.text-editor .CodeMirror-linewidget):
(.source-code.text-editor > .CodeMirror .line-indicator-widget.inline):
(@media (prefers-dark-interface)):
(.source-code.text-editor > .CodeMirror .thread-widget.inline):
* UserInterface/Views/SourceCodeTextEditor.js:
(WI.SourceCodeTextEditor.prototype._updateThreadIndicatorWidget):
(WI.SourceCodeTextEditor.prototype._updateIssueWidgetForIssues):
* UserInterface/Views/TextEditor.css:
(@media (prefers-dark-interface)):
(.text-editor > .CodeMirror .execution-line.primary .CodeMirror-linenumber::after):
* UserInterface/Views/Variables.css:
(:root):


Canonical link: https://commits.webkit.org/203338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234465 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
@@ -233,11 +233,11 @@
 
     /* TextEditor.css */
     .text-editor > .CodeMirror .execution-line {
-        background-color: hsla(99, 100%, 51%, 0.3) !important;
+        background-color: hsla(89, 100%, 51%, 0.25) !important;
     }
     .text-editor > .CodeMirror .execution-range-highlight:not(.CodeMirror-selectedtext),
     .text-editor > .CodeMirror .execution-range-highlight:not(.CodeMirror-selectedtext) + .CodeMirror-widget {
-        background-color: hsl(99, 96%, 19%);
+        background-color: hsl(99, 85%, 30%);
     }
 
 
@@ -1043,16 +1043,8 @@
         background-color: var(--warning-background-color);
     }
 
-    .source-code.text-editor > .CodeMirror .issue-widget.inline.warning > .arrow {
-        border-right-color: var(--warning-background-color);
-    }
-
     .source-code.text-editor > .CodeMirror .issue-widget.inline.error {
         background-color: var(--error-background-color);
-    }
-
-    .source-code.text-editor > .CodeMirror .issue-widget.inline.error > .arrow {
-        border-right-color: var(--error-background-color);
     }
 
 
